feat: #445 Provide new API and Admin CLI command to check status and rotate encryption key
